src/objects/One_Stop__c.object
<CustomObject>
    <fields>
        <fullName>Actual_Expected_Due_Date__c</fullName>
        <description>Value should default the Requested Due Date and be editable by person handling the ticket</description>
        <inlineHelpText>Value should default the Requested Due Date and be editable by person handling the ticket</inlineHelpText>
        <label>Actual Expected Due Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Additional_To_Email_address_1__c</fullName>
        <label>Additional To Email 1</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Additional_To_Email_address_2__c</fullName>
        <label>Additional To Email 2</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Additional_To_Email_address_3__c</fullName>
        <label>Additional To Email 3</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Admin_Notes__c</fullName>
        <label>Admin Notes</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Approval_Date__c</fullName>
        <label>Approval Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Approved_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>User object of the Approver</description>
        <label>Approved By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>One_Stop</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Approver_Email__c</fullName>
        <label>Approver Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Approver_Name__c</fullName>
        <description>Name of the Approver</description>
        <label>Approver Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Review_or_Approved_Date__c</fullName>
        <label>Business Review or Approved Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Business_Reviewer_or_Approver__c</fullName>
        <label>Business Reviewer or Approver</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>1STOP</relationshipLabel>
        <relationshipName>X1STOP</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Comment_Summary__c</fullName>
        <label>Comment Summary</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Comment__c</fullName>
        <label>Comment</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Created_Date__c</fullName>
        <formula>CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Due_Date_Comments__c</fullName>
        <label>Due Date Comments</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Flag1__c</fullName>
        <formula>IF(now()&lt; Actual_Expected_Due_Date__c ,&apos;Green&apos;,  IF( OR(Request_Closed_Date__c &lt; Actual_Expected_Due_Date__c, ISBLANK(Actual_Expected_Due_Date__c ) ), &apos;Green&apos;, &apos;Red&apos;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Flag</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Flag__c</fullName>
        <formula>IF(now()&lt; Actual_Expected_Due_Date__c ,IMAGE(&apos;https://c.na6.content.force.com/servlet/servlet.FileDownload?file=01580000001szWG&amp;oid=&apos;+$Organization.Id,&apos;Green&apos;), IF( OR(Request_Closed_Date__c &lt; Actual_Expected_Due_Date__c, ISBLANK(Actual_Expected_Due_Date__c ) ) , IMAGE(&apos;https://c.na6.content.force.com/servlet/servlet.FileDownload?file=01580000001szWG&amp;oid=&apos;+$Organization.Id,&apos;Green&apos;), IMAGE(&apos;https://c.na6.content.force.com/servlet/servlet.FileDownload?file=01580000001szWL&amp;oid=&apos;+$Organization.Id,&apos;Red&apos;)) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>RED Flag indicates that the current date time is exceeded &apos;Actual Expected Due Date&apos;, and still the request is not closed.</inlineHelpText>
        <label>Flag</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsItApproved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is It Approved?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Modified_Date__c</fullName>
        <formula>LastModifiedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last Modified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Meets_Criteria__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Meets Criteria</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reason_for_Passed_SLA__c</fullName>
        <label>Reason for Passed SLA</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Clarification with Systems Team</fullName>
                </value>
                <value>
                    <fullName>Clarification with Requestor</fullName>
                </value>
                <value>
                    <fullName>Ticket Reopened by User</fullName>
                </value>
                <value>
                    <fullName>Weekend Hours</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reason_for_Reopening__c</fullName>
        <label>Reason for Reopening</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Incorrect Resolution Provided</fullName>
                </value>
                <value>
                    <fullName>Ticket Not Completed</fullName>
                </value>
                <value>
                    <fullName>Ticket Partially Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reopened_Count__c</fullName>
        <description>It tells how many times a request has been reopened</description>
        <inlineHelpText>This number tells how many times the request has been reopened.</inlineHelpText>
        <label>Reopened Count</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Report_Provided__c</fullName>
        <label>Report Provided</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Request_Category__c</fullName>
        <label>Request Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>AutoResponse</fullName>
                </value>
                <value>
                    <fullName>Case Data</fullName>
                </value>
                <value>
                    <fullName>Chat</fullName>
                </value>
                <value>
                    <fullName>CX</fullName>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Fulfillment</fullName>
                </value>
                <value>
                    <fullName>Internal Activities</fullName>
                </value>
                <value>
                    <fullName>Knowledge</fullName>
                </value>
                <value>
                    <fullName>Reporting</fullName>
                </value>
                <value>
                    <fullName>System Troubleshooting</fullName>
                </value>
                <value>
                    <fullName>User Request</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Request_Closed_Date__c</fullName>
        <inlineHelpText>Date and Time when the request was closed</inlineHelpText>
        <label>Request Closed Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Request_Description__c</fullName>
        <inlineHelpText>Write more details about your request(include examples if apply) to get it resolved quickly, avoid confusions and delays.</inlineHelpText>
        <label>Request Description</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Request_Subcategory__c</fullName>
        <label>Request Subcategory</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Request_Category__c</controllingField>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Add Queues</fullName>
                </value>
                <value>
                    <fullName>Add Source codes</fullName>
                </value>
                <value>
                    <fullName>Add Users to Queue</fullName>
                </value>
                <value>
                    <fullName>Advice/Questions/How to Use</fullName>
                </value>
                <value>
                    <fullName>Assign to email queue</fullName>
                </value>
                <value>
                    <fullName>Block Chat Visitor</fullName>
                </value>
                <value>
                    <fullName>Case Data Correction</fullName>
                </value>
                <value>
                    <fullName>Case Deletion</fullName>
                </value>
                <value>
                    <fullName>Change Case Country/Owner</fullName>
                </value>
                <value>
                    <fullName>Change Existing Template</fullName>
                </value>
                <value>
                    <fullName>Change User Permissions/Profile/Role</fullName>
                </value>
                <value>
                    <fullName>Create queue/groups</fullName>
                </value>
                <value>
                    <fullName>CX IVR Results Load</fullName>
                </value>
                <value>
                    <fullName>Deactivate</fullName>
                </value>
                <value>
                    <fullName>Deactivate User and remove from groups/queues</fullName>
                </value>
                <value>
                    <fullName>Delete queue/groups</fullName>
                </value>
                <value>
                    <fullName>Deployment</fullName>
                </value>
                <value>
                    <fullName>Edit/Corrections</fullName>
                </value>
                <value>
                    <fullName>Edit Existing AutoResponse</fullName>
                </value>
                <value>
                    <fullName>Featured Articles</fullName>
                </value>
                <value>
                    <fullName>GCR Training Website</fullName>
                </value>
                <value>
                    <fullName>Kardia System Error</fullName>
                </value>
                <value>
                    <fullName>Locked object data corrections</fullName>
                </value>
                <value>
                    <fullName>Mass Email</fullName>
                </value>
                <value>
                    <fullName>New AutoResponse</fullName>
                </value>
                <value>
                    <fullName>New Email Template</fullName>
                </value>
                <value>
                    <fullName>New PROD User</fullName>
                </value>
                <value>
                    <fullName>New Report/Dashboard</fullName>
                </value>
                <value>
                    <fullName>New TRAIN User</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Requested_Due_Date__c</fullName>
        <inlineHelpText>This date is the requested date and may change based on SLA agreement or priority against other work</inlineHelpText>
        <label>Requested Due Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Requestor_Email__c</fullName>
        <label>Requestor Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Requestor_Name__c</fullName>
        <label>Requestor Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Requestor_Telephone_Number__c</fullName>
        <label>Requestor Telephone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>SLA_Handling_Time__c</fullName>
        <formula>(Request_Closed_Date__c -  Actual_Expected_Due_Date__c)*24</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SLA Handling Time (Hours)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SLA__c</fullName>
        <label>SLA</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Secondary_Approver_Date__c</fullName>
        <label>Secondary Approver Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Secondary_Approver_Name__c</fullName>
        <label>Secondary Approver Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Send_Email__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>It includes Approver, Owner, Requestor and Additional To Emails. 
If this is a new request and needs approval, then notification includes members of queue.</inlineHelpText>
        <label>Send Notification To Everyone</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Send_Notification_To_Approver__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Send Notification To Approver/Owner</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
                <value>
                    <fullName>Working</fullName>
                </value>
                <value>
                    <fullName>Return to Requestor - Incomplete</fullName>
                </value>
                <value>
                    <fullName>Return to Requestor - Clarification</fullName>
                </value>
                <value>
                    <fullName>Return to Infosys</fullName>
                </value>
                <value>
                    <fullName>Return to Approver - Incomplete</fullName>
                </value>
                <value>
                    <fullName>Return to Approver - Clarification</fullName>
                </value>
                <value>
                    <fullName>Reopened</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sub_Status__c</fullName>
        <label>Sub Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Return to Requestor - Incomplete</fullName>
                </value>
                <value>
                    <fullName>Return to Requestor - Clarification</fullName>
                </value>
                <value>
                    <fullName>Return to 1STOP</fullName>
                </value>
                <value>
                    <fullName>Return to Approver - Incomplete</fullName>
                </value>
                <value>
                    <fullName>Return to Approver - Clarification</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <inlineHelpText>Short description of the request. It states what’s inside the actual description.</inlineHelpText>
        <label>Subject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Handling_Time__c</fullName>
        <formula>( Request_Closed_Date__c -   Approval_Date__c  )*24</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Handling Time (Hours)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>User_Type__c</fullName>
        <label>User Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Contact Center</fullName>
                    <default>true</default>
                    <label>Contact Center</label>
                </value>
                <value>
                    <fullName>Social Care</fullName>
                </value>
                <value>
                    <fullName>All Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Work_Request__c</fullName>
        <label>Work Request</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X1STOP_Approval__c</fullName>
        <label>1STOP Approval</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Admin Handled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>1STOP</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Created_Date__c</columns>
        <columns>Requestor_Name__c</columns>
        <columns>Request_Category__c</columns>
        <columns>Status__c</columns>
        <columns>Subject__c</columns>
        <columns>Flag1__c</columns>
        <columns>Flag__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>X1STOP_Approval__c</columns>
        <columns>Request_Description__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Closed</fullName>
        <columns>NAME</columns>
        <columns>Created_Date__c</columns>
        <columns>Request_Category__c</columns>
        <columns>Request_Subcategory__c</columns>
        <columns>Status__c</columns>
        <columns>Subject__c</columns>
        <columns>Request_Description__c</columns>
        <columns>Comment_Summary__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Flag__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Closed</value>
        </filters>
        <filters>
            <field>Approver_Name__c</field>
            <operation>contains</operation>
            <value>schoch</value>
        </filters>
        <label>Closed</label>
        <language>en_US</language>
        <sharedTo>
            <group>GCR_Admins</group>
            <group>GCR_IDS_Admins</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>X1STOP_AAI_Approval_Queue_One_Stop</fullName>
        <columns>Requestor_Name__c</columns>
        <columns>NAME</columns>
        <columns>Created_Date__c</columns>
        <columns>Request_Category__c</columns>
        <columns>Request_Subcategory__c</columns>
        <columns>Request_Description__c</columns>
        <columns>Status__c</columns>
        <filterScope>Queue</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Closed</value>
        </filters>
        <label>1STOP AAI Approval Queue</label>
        <language>en_US</language>
        <queue>X1STOP_AAI_Approval_Queue</queue>
        <sharedTo>
            <group>GCR_Admins</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>X1STOP_AMR_Approval_Queue_One_Stop</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Sub_Status__c</columns>
        <columns>Request_Category__c</columns>
        <columns>Request_Subcategory__c</columns>
        <columns>Subject__c</columns>
        <columns>Request_Description__c</columns>
        <columns>Flag__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Queue</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Closed</value>
        </filters>
        <label>1STOP AMR Approval Queue</label>
        <language>en_US</language>
        <queue>X1STOP_AMR_Approval_Queue</queue>
        <sharedTo>
            <group>GCR_Admins</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>X1STOP_Approved_One_Stop</fullName>
        <columns>Flag__c</columns>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>Status__c</columns>
        <columns>Priority__c</columns>
        <columns>Requested_Due_Date__c</columns>
        <columns>Actual_Expected_Due_Date__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>Request_Category__c</columns>
        <columns>Subject__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Closed</value>
        </filters>
        <filters>
            <field>X1STOP_Approval__c</field>
            <operation>equals</operation>
            <value>Approved</value>
        </filters>
        <filters>
            <field>OWNER.FIRST_NAME</field>
            <operation>notEqual</operation>
            <value>Vanessa,Paul,Charles,ChadT,Sue,Sarah,Rachel,Vivien,Maria</value>
        </filters>
        <label>1STOP Approved</label>
        <language>en_US</language>
        <sharedTo>
            <group>GCR_Admins</group>
            <group>GCR_IDS_Admins</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>X1STOP_China_Approval_Queue_One_Stop</fullName>
        <columns>NAME</columns>
        <columns>Request_Category__c</columns>
        <columns>Request_Subcategory__c</columns>
        <columns>Request_Description__c</columns>
        <columns>Subject__c</columns>
        <columns>Status__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Queue</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Closed</value>
        </filters>
        <label>1STOP China Approval Queue</label>
        <language>en_US</language>
        <queue>X1STOP_China_Approval_Queue</queue>
        <sharedTo>
            <group>GCR_Admins</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>X1STOP_EMEA_Approval_Queue_One_Stop</fullName>
        <columns>Requestor_Name__c</columns>
        <columns>NAME</columns>
        <columns>Created_Date__c</columns>
        <columns>Actual_Expected_Due_Date__c</columns>
        <columns>Request_Category__c</columns>
        <columns>Request_Description__c</columns>
        <columns>Status__c</columns>
        <columns>Sub_Status__c</columns>
        <filterScope>Queue</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Closed</value>
        </filters>
        <label>1STOP EMEA Approval Queue</label>
        <language>en_US</language>
        <queue>X1STOP_EMEA_Approval_Queue</queue>
        <sharedTo>
            <group>GCR_Admins</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>X1STOP_GLOBAL_Needs_Approval</fullName>
        <columns>NAME</columns>
        <columns>Requestor_Name__c</columns>
        <columns>Request_Category__c</columns>
        <columns>Request_Description__c</columns>
        <filterScope>Queue</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Closed</value>
        </filters>
        <label>1STOP GLOBAL Needs Approval</label>
        <language>en_US</language>
        <queue>X1STOP_Needs_Approval</queue>
        <sharedTo>
            <group>GCR_Admins</group>
            <group>GCR_IDS_Admins</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>X1STOP_Japan_Approval_Queue_One_Stop</fullName>
        <columns>NAME</columns>
        <columns>Request_Category__c</columns>
        <columns>Request_Subcategory__c</columns>
        <columns>Request_Description__c</columns>
        <columns>Subject__c</columns>
        <columns>Status__c</columns>
        <filterScope>Queue</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Closed</value>
        </filters>
        <label>1STOP Japan Approval Queue</label>
        <language>en_US</language>
        <queue>X1STOP_Japan_Approval_Queue</queue>
        <sharedTo>
            <group>GCR_Admins</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>X1STOP_Korea_Approval_Queue_One_Stop</fullName>
        <columns>NAME</columns>
        <columns>Subject__c</columns>
        <columns>Request_Category__c</columns>
        <columns>Request_Subcategory__c</columns>
        <columns>Request_Description__c</columns>
        <columns>Requested_Due_Date__c</columns>
        <filterScope>Queue</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Closed</value>
        </filters>
        <label>1STOP Korea Approval Queue</label>
        <language>en_US</language>
        <queue>X1STOP_Korea_Approval_Queue</queue>
        <sharedTo>
            <group>GCR_Admins</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>X1STOP_Reporting_One_Stop</fullName>
        <columns>NAME</columns>
        <columns>Requestor_Name__c</columns>
        <columns>Created_Date__c</columns>
        <columns>Actual_Expected_Due_Date__c</columns>
        <columns>Request_Category__c</columns>
        <columns>Request_Description__c</columns>
        <columns>Status__c</columns>
        <columns>Sub_Status__c</columns>
        <columns>Subject__c</columns>
        <filterScope>Queue</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Closed</value>
        </filters>
        <label>1STOP Reporting</label>
        <language>en_US</language>
        <queue>X1STOP_Reporting</queue>
    </listViews>
    <listViews>
        <fullName>X1STOP_User_Review</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Sub_Status__c</columns>
        <columns>Request_Category__c</columns>
        <columns>Request_Subcategory__c</columns>
        <columns>Subject__c</columns>
        <columns>Request_Description__c</columns>
        <columns>Flag__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Queue</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Closed</value>
        </filters>
        <label>1STOP User Review</label>
        <language>en_US</language>
        <queue>X1STOP_User_Review</queue>
        <sharedTo>
            <group>GCR_Admins</group>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>{0000000}</displayFormat>
        <label>Request Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>1STOP</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>